# DoomDemake

./: README.md  Диаграмма без названия.drawio  Словно х.drawio
Doom/: CMakeLists.txt  LevelLoader.cpp  LevelLoader.h  desktop.ini  main.cpp  Диаграмма без названия.drawio
Doom/controller/: CMakeLists.txt  Player.cpp  Player.h
Doom/data/levels/: level0.txt
Doom/model/: CMakeLists.txt  Frame.cpp  Frame.h  Level.cpp  Level.h  Sprite.cpp  Sprite.h
Doom/view/: main.cpp
